fixed image squishing horizontally to fit better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ body {
     border-radius: 10px;
     height: 300px;
     width: auto;
+    max-width: 100%;
 }
 
 #newWord {
